# apple-health-analyzer

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README_TESTING.md  TESTING_REPORT.md  TESTING_REPORT.zh.md  TODO.md  apple_health_export.code-workspace  benchmark.py  coverage_blind_spots.md  main.py  pyproject.toml  pyrightconfig.json  test_failures_analysis.md
.github/workflows/: ci.yml
apple-health-analyzer/: .env.example  .gitignore  AVAILABILITY_REPORT.md  FINAL_ISSUES_SUMMARY.md  PLAN.md  README.md  SYSTEM_AVAILABILITY_REPORT.md  coverage.json  integration_test.py  integration_test_report.md  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  system_usability_report.md  test_coverage_report.md
apple-health-analyzer/docs/: development.md
apple-health-analyzer/src/: cli.py  cli_visualize.py
apple-health-analyzer/src/analyzers/: __init__.py  anomaly.py  statistical.py
apple-health-analyzer/src/core/: __init__.py  data_models.py  exceptions.py  protocols.py  xml_parser.py
apple-health-analyzer/src/processors/: __init__.py  cleaner.py  exporter.py  heart_rate.py  sleep.py
apple-health-analyzer/src/utils/: __init__.py  logger.py
apple-health-analyzer/src/visualization/: charts.py  data_converter.py  reports.py
apple-health-analyzer/tests/: test_charts.py  test_cleaner.py  test_data_models.py  test_exporter.py  test_heart_rate.py  test_highlights.py  test_reports.py  test_sleep.py  test_statistical.py  test_xml_parser.py
docs/: AGENTS.md  BUILD_HANDOFF.md  BUILD_PLAN.md  BUILD_TODO.md  CONTRIBUTING.en.md  CONTRIBUTING.zh.md  FINAL-REPORT.md  FINAL_REPORT.md  PHASE-1-REVIEW.md  PHASE-2-CLEANUP.md  PHASE-3-COMMENTS.md  PHASE-4-REFACTOR.md  PHASE-5-TESTS.md  PHASE-6-VERIFICATION.md  PHASE1_ANALYSIS.md  PHASE2_REFACTOR_PLAN.md  PHASE3_TEST_STRATEGY.md  PHASE_0_SUMMARY.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  PLAN.md  README.en.md  README.md  README.zh.md  TEST_COVERAGE_REPORT.md  TODO.md  phase-1-analysis.md  phase-2-i18n.md  phase-3-tests.md
example/: create_example_xml.py
src/: __init__.py  cli.py  cli_visualize.py  config.py
src/analyzers/: __init__.py  anomaly.py  extended_analyzer.py  highlights.py  statistical.py
src/core/: __init__.py  data_models.py  exceptions.py  protocols.py  xml_parser.py
src/i18n/: __init__.py  locale.py  store.py  translator.py
src/processors/: benchmark.py  cleaner.py  exporter.py  heart_rate.py  optimized_processor.py  sleep.py  validator.py
src/utils/: __init__.py  logger.py  record_categorizer.py  type_conversion.py
src/visualization/: __init__.py  charts.py  data_converter.py  reports.py
tests/: __init__.py  conftest.py  test_anomaly.py  test_benchmark.py  test_charts.py  test_cleaner.py  test_cli_visualize.py  test_config.py  test_extended_analyzer.py  test_heart_rate.py  test_highlights.py  test_integration.py  test_logger.py  test_optimized_processor.py  test_protocols.py  test_reports.py  test_sleep.py
tests/analyzers/: test_anomaly.py  test_extended_analyzer.py  test_highlights.py  test_statistical.py
tests/cli/: test_cli.py  test_cli_commands.py  test_cli_coverage.py  test_cli_helpers.py  test_cli_visualize.py  test_cli_visualize_branches.py  test_cli_visualize_commands.py  test_cli_visualize_errors.py  test_cli_visualize_helpers.py
tests/config/: test_config.py
tests/core/: test_data_models.py  test_exceptions.py  test_xml_parser.py
tests/fixtures/: example.xml  export.xml
tests/integration/: test_integration.py
tests/processors/: test_benchmark.py  test_cleaner.py  test_exporter.py  test_heart_rate.py  test_heart_rate_coverage.py  test_optimized_processor.py  test_sleep.py  test_validator.py
tests/utils/: test_logger.py  test_logger_coverage.py  test_record_categorizer.py  test_type_conversion.py
tests/visualization/: test_charts.py  test_charts_report_generation.py  test_data_converter.py  test_reports.py
